--- a/intropages.tex
+++ b/intropages.tex
@@ -10,10 +10,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \title       {UCF~ETD~Title~Here}
-\author      {Your~Name~Here}
+\author      {Shayan Taheri}
 %
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\prevdegreei    {B.S. University of Central Florida, 2004}
+\prevdegreei    {M.S. Utah State University, 2015}
 \noprevdegreeii   %{Professional Degree of Electronics Engineer, 1995}
 \noprevdegreeiii  %{M.S. University of Central Florida, 2000}
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -23,23 +23,20 @@
 \term       {Summer}
 % Note:  degreeyear should be optional, but as of  5-Feb-96
 % it seems required or you get a year of ``2''.   -johnh
-\degreeyear {2007}
-\professor  {John A.\ Professor}
+\degreeyear {2020}
+\professor  {Jiann-Shiun Yuan}
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \nosigpage  % Comment to render signature page.
-\defensedate {July 13, 2007} % For Signature Page
+\defensedate {April XX, 2020} % For Signature Page
 %\nocopyright % Uncomment for no copyright page
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 % For Masters Defense, Chair plus 2 committee members required
-\chair      {John A.\ Professor}
-\member     {Committee W.\ Member}
-\member     {Committee G.\ Member}
-\member     {Committee A.\ Member}
+\chair      {Jiann-Shiun Yuan}
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\dedication     {\textsl{This thesis is dedicated to Daniel Gallagher for giving me his \LaTeX\ template which he so graciously published as a Git repository at: \url{https://bitbucket.org/dgallagher/ucf-thesis-latex-template}.}}
+\dedication     {\textsl{To my beloved parents and dear brother ...}}
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \acknowledgments {
-Include any desired acknowledgements here.
+XXXXX.
 }
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  \sloppy
@@ -47,7 +44,7 @@ Include any desired acknowledgements here.
 % \relax
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \abstract{ % Thesis abstract goes here or included in separate file for simplicity.
-\lipsum[1] % Placeholder text.
+XXXXXX.
 %\input{abstract}
 }
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
