--- a/thesis.tex
+++ b/thesis.tex
@@ -27,17 +27,7 @@
 % Chapters may be separated into individual .tex files for simplicity
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 % Chapter 1
-\input{chapters/introduction}
-% Chapter 2
-\input{chapters/chapter2}
-% Chapter 3
-%\input{chapters/chapter3}
-% Chapter 4
-%\input{chapters/chapter4}
-% Chapter 5
-%\input{chapters/chapter5}
-% Chapter 6
-%\input{chapters/ch_conclusions}
+\input{chapters/chapt1_intro}
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % APPENDIX
